--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+*, ::before, ::after {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  overflow-wrap: break-word;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
